--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/c993050cd8.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;700&display=swap" rel="stylesheet"> 
 
     <title>React Todo List</title>
   </head>
